compiler/testData/diagnostics/quick/backingField/ReadForwardInAnonymous.jet
class ReadForward() {
    {
        val x = <!UNINITIALIZED_VARIABLE!>$a<!>
    }

    val a = 1
}
